--- a/src/Components/Students.css
+++ b/src/Components/Students.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 .students-wrapper {
-  padding-left: 1rem;
+  /* padding-left: 1rem; */
   background: #f6f8fc;
   min-height: 100vh;
   padding-left: 10px;
@@ -44,7 +44,7 @@
   line-height: 100%;
   letter-spacing: -0.6%;
   color: #6E7C87;
-  transition: opacity 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
+  /* transition: opacity 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out; */
 }
 
 .search {
@@ -53,7 +53,7 @@
   margin-left: 2px;
   margin-bottom: 10px;
   transition: all 0.3s ease-in-out;
-}
+} 
 
 .search-bar {
   width: 100%;
@@ -144,13 +144,13 @@
   border-bottom-left-radius: 8px;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; 
   top:0;
 }
 
 .students-header-section.scrolled-up .students-header {
   font-size: 20px;
-  margin-top: 0;
+  margin-top: 10px;
   margin-bottom: 0;
 }
 
@@ -176,9 +176,9 @@
 
   .students-header-section {
     width: 85%;
-    height: 148px;
-    /* top: 57px; */
-    left: 0px;
+    height: 137px;
+    top: 0px;
+    left: 10px;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
     border-right-width: 1px;
@@ -187,8 +187,14 @@
     margin-top: -10px;
     top:57px;
     position: fixed;
-    margin-left: 10px;
+    margin-left: 0px;
+    transition: transform 0.3s ease-in-out;
+    background-image: url(../assets/mobile1x.png);
   }
+
+  .students-header-section.hidden {
+  transform: translateY(-100%);
+}
 
   .students-header {
     width: 185px;
@@ -229,7 +235,7 @@
 
   .card-grid-section {
     width: 90%;
-    margin-top: 200px;
+    margin-top: 168px;
   }
 
   .card-grid {
@@ -238,7 +244,7 @@
   }
 
   .card {
-    width: 169px;
+    width: 164px;
     height: 110px;
     border-radius: 6px;
     border-width: 1px;
@@ -262,6 +268,7 @@
     line-height: 100%;
     letter-spacing: -2.2%;
     margin-left: 10px;
+    padding-top:3px;
   }
 
   .card-description {
@@ -291,7 +298,7 @@
     flex-direction: row;
     align-items: center;
     padding-right:24px;
-    top: 57px;
+    top: 47px;
   }
 
   .students-header-section.scrolled-up .students-header {
@@ -305,14 +312,14 @@
   }
 
   .students-header-section.scrolled-up .search {
-    width: 120px;
+    width: 42px;
     height: 28px;
     padding-right: 40px;
     padding-bottom: 0;
   }
 
   .students-header-section.scrolled-up .search-bar {
-    padding: 6px 6px 6px 30px;
+    padding: 10px 10px 10px 30px;
     font-size: 12px;
   }
 
@@ -320,6 +327,6 @@
     width: 16px;
     height: 16px;
     left: 8px;
-    padding-top: 10px;
+    padding-top: 20px;
   }
 }
